fix: Fix doc header spacing issue

--- a/docs/src/styles/globals.css
+++ b/docs/src/styles/globals.css
@@ -1,1 +1,6 @@
 @import './fonts/cascadia-code.css';
+
+* {
+  scroll-behavior: smooth;
+  scroll-margin-top: 6rem;
+}
